--- a/css/pc.css
+++ b/css/pc.css
@@ -579,6 +579,13 @@ header #right-search-form>#right-search-btn
 	background-color: #FF4795;
 }
 
+/* 글 작성자 프로필 이미지 경계 설정 */
+#article-info>.article-profile-img
+{
+	border: 3px solid #0036FF;
+	border-radius: 0px;
+}
+
 /* 글 내부 제목 ~ 닉네임 부분 위아래 여백 늘리기 */
 #article-info
 {
