--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,6 @@
 /* 해기님 트게더 (해게더) 모바일 CSS */
 /* 제작 : omg7_ (TwitchTV ID, email : ohmygirl7@naver.com) */
-/* 최종 수정 일자 : 2021-03-20 */
+/* 최종 수정 일자 : 2021-03-21 */
 
 /* 적용 방법 : 아래 한 줄의 코드를 모바일 뷰 CSS 칸에 입력
 @import url("https://omg6.github.io/tgd-haegi/css/mobile.css");
@@ -103,9 +103,20 @@ header>#header-search-bar #header-search-btn
 	background: #FFF8C8;
 	border-color: #BCA92C;
 	border-width: 2px;
+	height: 82px;
 }
 
-/* 프로필 이미지 크기 확장 */
+/* 프로필 이미지 옆 스트리머명 글씨 크기 및 위치 조절 */
+#board-info>h1
+{
+	font-size: 20px;
+	height: 41px;
+	border-bottom: 3px solid #FFC9FF;
+	width: 11em;
+	margin-left: 80px;
+}
+
+/* 프로필 이미지 크기 확장 및 위치 조절 */
 #board-info h1 > #board-info-profile-img
 {
 	margin-right: 5px;
@@ -114,12 +125,24 @@ header>#header-search-bar #header-search-btn
 	border-radius: 100px;
 	z-index: 1;
 	border: #5AA1F5 solid 0.12em;
+	position: relative;
+	left: -80px;
 }
 
-/* 프로필 이미지 옆 스트리머명 글씨 크기 조절 */
-#board-info>h1
+/* 스트리머명 부분 위치 조절 */
+#board-info>h1>a
 {
-	font-size: 18px;
+	position: relative;
+	bottom: 18px;
+	left: -75px;
+}
+
+/* 접속자 아이콘 및 인원 부분 위치 조절 */
+#board-info #viewers-area
+{
+	position: relative;
+	bottom: 24px;
+	left: -10px;
 }
 
 /* 라이브 문구 전 이미지 삽입 (미사용) */
@@ -135,7 +158,8 @@ header>#header-search-bar #header-search-btn
 	background: #FF00FF;
 	font-size: 0px;
 	position: relative;
-	bottom: 1px;
+	bottom: 20px;
+	left: -50px;
 }
 
 /* 방송 진행 중 활성화되는 라이브 문구 이후 텍스트 삽입 */
@@ -161,9 +185,10 @@ header>#header-search-bar #header-search-btn
 }
 
 /* 트게더 접속인원 아이콘 변경 및 위치 조정 */
+/* 사용된 아이콘 출처 : https://tgd.kr/s/he0901/35779884 (팬 제작 도트) */
 #board-info #viewers-area .fa-user:before
 {
-	content: url(https://cdn.discordapp.com/attachments/817410187199512678/821030334802952212/2_resize.png); /* 12M sub icon - resize */
+	content: url(https://cdn.discordapp.com/attachments/817410187199512678/823113214543265792/fanart_sunflower.png); /* img > fanart_sunflower.png */
 	margin-left: 7px;
 	margin-right: 7px;
 }
